[gd_scene load_steps=6 format=3 uid="uid://suioa5s4wcvf"]

[ext_resource type="Script" uid="uid://bnftyk2c0xyjd" path="res://objects/ui/popup/my_popup.gd" id="1_e2yqq"]
[ext_resource type="Texture2D" uid="uid://c56r12q8174p5" path="res://sprites/popup/popup_background.png" id="1_ks4p2"]
[ext_resource type="Texture2D" uid="uid://b0oirslvhuctq" path="res://sprites/popup/close_button.png" id="3_rms0a"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yuapu"]
texture = ExtResource("1_ks4p2")
texture_margin_left = 96.0
texture_margin_top = 96.0
texture_margin_right = 96.0
texture_margin_bottom = 96.0
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[sub_resource type="LabelSettings" id="LabelSettings_e2yqq"]
font_size = 61

[node name="Backdrop" type="PanelContainer"]
z_index = 100
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e2yqq")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxTexture_yuapu")

[node name="HBox" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBox"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Title" type="Label" parent="PanelContainer/HBox/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Title Title Title"
label_settings = SubResource("LabelSettings_e2yqq")
horizontal_alignment = 1

[node name="Message" type="Label" parent="PanelContainer/HBox/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Message Message Message Message Message Message Message Message Message"
horizontal_alignment = 1

[node name="CrossContainer" type="Control" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="CloseIcon" type="TextureRect" parent="PanelContainer/CrossContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -96.0
offset_right = 96.0
grow_vertical = 0
texture = ExtResource("3_rms0a")

[connection signal="gui_input" from="PanelContainer/CrossContainer/CloseIcon" to="." method="_on_close_icon_gui_input"]
[connection signal="mouse_entered" from="PanelContainer/CrossContainer/CloseIcon" to="." method="_on_close_icon_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/CrossContainer/CloseIcon" to="." method="_on_close_icon_mouse_exited"]
